implementa tags, atualiza primeiro post

--- a/_sass/moving.scss
+++ b/_sass/moving.scss
@@ -13,7 +13,9 @@ $spacing-unit: 30px !default;
 
 $text-color: #FAD9A8 !default;
 $background-color: #2E2A24 !default;
-$brand-color: #2a7ae2 !default;
+$brand-color: #AA852D !default;
+
+$link-hover-color: #25963E !default;
 
 $grey-color: #242424 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
