adiciona favicon e altera post 2022-02-10-ilc.md

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 
 <p>
   {{ page.date | date: "%d/%m/%Y" }}
-  {% assign tag = site.tags | where: 'short_name', page.tag | first %}
+  {% assign tag = site.tags | where: 'short_name', page.tags | first %}
   {% if tag %}
   <a href="{{ tag.url }}">#{{ tag.short_name }}</a>
   {% endif %}
