atualiza método legado do highlight.js

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="{{ site.url }}/assets/css/agate.css" />
   <script src="{{ site.url }}/assets/scripts/hljs/highlight.min.js"></script>
   <script>
-    hljs.initHighlightingOnLoad();
+    hljs.highlightAll();
   </script>
   {%- feed_meta -%}
 </head>
