--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<a href="/">&#8592;</a>
+<a name="voltar" href="/">&#8592;</a>
 <h1>{{ page.title }}</h1>
 
 <p>
@@ -14,3 +14,5 @@ layout: default
 
 {{ content }}
 
+<hr>
+<div align="center"><a href="#top">&#8593;</a>
