altera cor do link para Aztec Gold

--- a/_sass/moving.scss
+++ b/_sass/moving.scss
@@ -13,7 +13,7 @@ $spacing-unit: 30px !default;
 
 $text-color: #FAD9A8 !default;
 $background-color: #2E2A24 !default;
-$brand-color: #AA852D !default;
+$brand-color: #D19C4C !default;
 
 $link-hover-color: #25963E !default;
 
