--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -2,7 +2,7 @@
 layout: default 
 ---
 <a href="/">&#8592;</a>
-<h1>{{ page.name }}</h1>
+<h1>{{ page.title }}</h1>
 <p><em>{{ page.desc }}</em></p>
 
 {{content}}
