--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,10 +6,13 @@
   <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css" />
   <link rel="shortcut icon" type="image/x-icon" href="/{{ site.favicon }}" />
   <link rel="stylesheet" href="{{ site.url }}/assets/css/agate.css" />
+
+  <link rel="stylesheet" href="{{ site.url }}/assets/scripts/hljs/styles/lioshi.min.css">
   <script src="{{ site.url }}/assets/scripts/hljs/highlight.min.js"></script>
   <script>
     hljs.highlightAll();
   </script>
+  
   {%- feed_meta -%}
   <title>{{ page.title }} &#8212; {{ site.title }}</title>
 </head>
