simplifica exibição das tags
Remove o filtro where que retornava sempre a tag exe.

Precisa ser aprimorado futuramente para exibir múltiplas tags.

Este commit também padroniza os títulos
para começarem com letra minúscula.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,10 +6,7 @@ layout: default
 
 <p>
   {{ page.date | date: "%d/%m/%Y" }}
-  {% assign tag = site.tags | where: short_name, page.tags | first %}
-  {% if tag %}
-  &nbsp; <a href="{{ tag.url }}">#{{ tag.short_name }}</a>
-  {% endif %}
+  &nbsp; <a href="{{ site.url }}/tags/{{ page.tags }}">#{{ page.tags }}</a>
 </p>
 
 {{ content }}
