corrige redundâncias e espaços sobrando
Correções sugeridas pelo CodeFactor

--- a/_sass/moving/_base.scss
+++ b/_sass/moving/_base.scss
@@ -102,7 +102,7 @@ hr {
 img {
   margin-bottom: 5px;
   margin-top: 5px;
-  padding: 2px 2px;
+  padding: 2px;
   border-radius: 3px;
   max-width: 100%;
   vertical-align: middle;
@@ -194,11 +194,11 @@ code {
 }
 
 code {
-  padding: 1px 1px;
+  padding: 1px;
 }
 
 pre {
-  padding: 1px 1px;
+  padding: 1px;
   overflow-x: auto;
 	border: 0;
 
