Adiciona página api.html

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,11 @@
 			repositório
 			</a>
 		</li>
+		<li>
+			<a class="black-link" href="{{ site.url }}/api.html">
+			api
+			</a>
+		</li>
 
               {%- if site.email -%}
               <li>
