--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -1,3 +1,9 @@
+* {
+   margin: 0px;
+}
+
+@import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/jetbrains-mono.min.css");
+@import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/fira-code.min.css");
 
 @media (min-width: 401px) {
     .col { margin: 50px 10% 100px; }
@@ -13,10 +19,10 @@
 
 body {
     background-color: #222222;
-    font-family: monospace;
 }
 
 #nav-menu {
+    font-family: 'Fira Mono', monospace; 
     background-color: #303030;
     border-top: solid 1px #202020;
     position: fixed;
@@ -35,6 +41,7 @@ nav ul {
 }
 
 nav li {
+	color: #F1E9E5;
     text-align: center;
     margin: 10px 10px;
     display: inline;
@@ -42,7 +49,7 @@ nav li {
 }
 
 #nav-botao {
-    background-color: #4CAF50;
+    background-color: #7D9D9C;
     border: none;
     color: #E0E0E0;
     padding: 10px 10px;
@@ -52,42 +59,55 @@ nav li {
     position: fixed;
     right: 0;
     bottom: 0;
+    margin-right: 20px;
+    transition: margin 1000ms;
+}
+
+.nav-botao-topo {
     margin-bottom: 60px;
-    margin-right: 10px;
+}
+
+.nav-botao-fundo {
+    margin-bottom: 20px;
 }
 
 p {
-	color: #cccccc;
+	color: #F1E9E5;
 	margin-bottom: 10px;
+    font-family: 'Jetbrains Mono', monospace; 
 }
 
-p.data {
+p.tagline {
+	color: #B4B897;
 	font-size: 13px;
-	color: #77767b;
+    margin-bottom: 50px;
 }
 
 a {
 	text-decoration: underline dotted #3C3C3C;
-	color: #8ff0a4;
+	color: #AEDBCE;
 }
 
 a:hover {
-	color: #33d17a;
-	transition: 1000ms;
+	color: #39AEA9;
+	transition: 1500ms;
 }
 
 h1 {
+    font-family: 'Fira Mono', monospace; 
     font-size: 25px;
 	font-weight: bold;
-	color: #71a566;
+	color: #7D9D9C;
 	font-size: 25px;
 	margin-bottom: 10px;
 }
 
 h2 {
+    font-family: 'Fira Mono', monospace; 
 	font-weight: bold;
-	color: #8ff0a4;
+    color: #576F72;
 	font-size: 15px;
+    margin: 30px 0px 10px;
 }
 
 h3 {
@@ -96,19 +116,14 @@ h3 {
 	font-size: 13px;
 }
 
-.lista ul {
-  list-style: none;
-  color: #cccccc;
+ul.lista {
+    margin-top: 10px;
+	color: #F1E9E5;
+    font-family: 'Jetbrains Mono', monospace; 
 }
 
-.lista ul li::before {
-  content: "\2B2B";
-  color: white;
-  font-weight: normal;
-  display: inline-block;
-  width: 2em;
-  margin-left: -1em;
-  margin-bottom: 5px;
+ul.lista li {
+    margin-top: 5px;
 }
 
 .destaque {
