--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -110,9 +110,11 @@ h2 {
 }
 
 h3 {
-	font-weight: bold;
-	color: #8ff0a4;
+	font-family: 'Fira Mono', monospace; 
+    font-weight: bold;
+	color: #9D9C7D;
 	font-size: 13px;
+    margin: 30px 0px 10px;
 }
 
 ul.lista {
