--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -92,6 +92,15 @@ a:hover {
 	transition: 1500ms;
 }
 
+.texto-pequeno {
+    font-size: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.item-espacado {
+    margin-bottom: 20px;
+}
+
 h1 {
     font-family: 'Fira Mono', monospace; 
     font-size: 25px;
