--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -42,7 +42,7 @@ body {
 }
 
 #nav-menu {
-    font-family: 'Fira Mono', monospace; 
+    font-family: 'Fira Mono', monospace;
     font-size: 12px;
     text-align: center;
     background-color: #303030;
@@ -93,7 +93,7 @@ nav li {
 p {
 	color: #F1E9E5;
 	margin-bottom: 10px;
-    font-family: 'Jetbrains Mono', monospace; 
+    font-family: 'Jetbrains Mono', monospace;
 }
 
 p.tagline {
@@ -117,12 +117,16 @@ a:hover {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.texto-menor {
+    font-size: 13px;
+}
+
 .item-espacado {
     margin-bottom: 20px;
 }
 
 h1 {
-    font-family: 'Fira Mono', monospace; 
+    font-family: 'Fira Mono', monospace;
     font-size: 25px;
 	font-weight: bold;
 	color: #7D9D9C;
@@ -131,7 +135,7 @@ h1 {
 }
 
 h2 {
-    font-family: 'Fira Mono', monospace; 
+    font-family: 'Fira Mono', monospace;
 	font-weight: bold;
     color: #576F72;
 	font-size: 15px;
@@ -139,7 +143,7 @@ h2 {
 }
 
 h3 {
-	font-family: 'Fira Mono', monospace; 
+	font-family: 'Fira Mono', monospace;
     font-weight: bold;
 	color: #9D9C7D;
 	font-size: 13px;
@@ -149,7 +153,7 @@ h3 {
 ul.lista {
     margin-top: 10px;
 	color: #F1E9E5;
-    font-family: 'Jetbrains Mono', monospace; 
+    font-family: 'Jetbrains Mono', monospace;
 }
 
 ul.lista li {
@@ -187,7 +191,7 @@ pre {
         padding: 5px;
         height: 70px;
     }
-    
+
     #lang-switch, #lang-dismiss, #lang-notification p {
         float: left;
     }
@@ -199,7 +203,7 @@ pre {
         padding: 5px;
         height: 60px;
     }
-    
+
     #lang-switch, #lang-dismiss, #lang-notification p {
         float: left;
     }
@@ -210,7 +214,7 @@ pre {
         padding: 5px;
         height: 85px;
     }
-    
-    
+
+
 }
 
